# i-am-reviewed

./: .dockerignore  .flake8  .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.Github  Dockerfile.Gitlab  NOTES.md  README.md  WORKFLOW.md  action.yml  pyproject.toml  requirements.txt
.claude/commands/: push-release.md
.github/workflows/: build-and-push.yml  pr-review.yml
adr/: adk-implementation.md
agent/: .env.example  __init__.py  logging_config.py  main.py  tracing_config.py
agent/utils/: __init__.py  text_cleanup.py
docs/: DEPLOYMENT.md  ENV.md  ENVIRONMENT_VALIDATION.md  GITHUB.md  IMPLEMENTATION_PLAN.md  PRD.md  SetUp.md  example-github-actions.yml  example-gitlab-build-and-push.yml  example-gitlab-ci.yml
evals/: agent_demo.ipynb  agent_demo_github.ipynb  agent_demo_gitlab.ipynb  hello.ipynb
pr_agent/: .env  .env.example  github_tools.py  main.py  reviewer.py
scripts/: retag-v1.0.sh
src/: .env.example  __init__.py  logging_config.py  tools.py  workflow.py
src/adk_agents/pr_review/: __init__.py  agent.py
src/pr_agent/: __init__.py  config.py  logging_config.py  tools.py  tracing_config.py  workflow.py
src/pr_agent/utils/: __init__.py  text_cleanup.py
templates/: code-review.yml
tests/: __init__.py  test_text_cleanup.py
